Bug 1570159 - CreatePairwiseWhitelistURI return success when it cannot get host from the top-level page. r=Ehsan

Before this patch, when we cannot get the host name from the top-level page, for example,
aboout page, UrlClassifeirCommon::CreatePairwiseWhitelistURI returns an error.

After this patch, when |GetHost| fails, we returns NS_OK to just skip looking up
whiltelist for this URI. Note that the lookup against blacklist tables will
still be performed.

Differential Revision: https://phabricator.services.mozilla.com/D49983